# fossvps_dashboard

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  docker-compose.develop.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: docker-build.yml
backend/: .env.example  Cargo.toml  Dockerfile  docker-compose.dev.yml  docker-compose.yml
backend/migrations/: 20260106000000_init.sql  20260107000000_support.sql  20260108000000_admin_user.sql
backend/src/: db.rs  main.rs
backend/src/clients/: incus.rs  mod.rs  proxmox.rs
backend/src/controllers/: auth.rs  metrics.rs  mod.rs  nodes.rs  support.rs  vms.rs  vnc.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: mod.rs  node.rs  support.rs  user.rs
backend/src/routes/: auth.rs  mod.rs  nodes.rs  vms.rs
backend/src/services/: mod.rs  vms.rs  vnc.rs
frontend/: .gitignore  Dockerfile  Dockerfile.build  docker-compose.dev.yml  docker-compose.yml  next.config.ts  package-lock.json  package.json
frontend/public/: vnc.html
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: providers.tsx
frontend/src/components/auth/: auth-guard.tsx
frontend/src/components/dashboard/: realtime-metrics.tsx
frontend/src/components/layout/: sidebar.tsx
frontend/src/components/nodes/: node-dialog.tsx
frontend/src/components/ui/: dialog.tsx  sheet.tsx
frontend/src/components/vms/: vm-dialog.tsx  vnc-client.tsx
frontend/src/services/: api.ts  auth.ts
frontend/src/types/: novnc.d.ts
(+5 files in other folders)
