[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
jsonwebtoken = "9.0"
argon2 = "0.5"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tower = "0.4"
async-trait = "0.1"
futures = "0.3"
anyhow = "1.0"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
tower-sessions = "0.12"
urlencoding = "2.1.3"
native-tls = "0.2"
